--- a/animation.css
+++ b/animation.css
@@ -11,7 +11,7 @@ body {
 }
 
 .img-container img {
-  height: 100%;
+  height: 90%;
   left: 0;
   object-fit: cover;
   object-position: center;
@@ -36,4 +36,10 @@ body {
   opacity: 0;
   transition: visibility 0s .5s, opacity .5s linear;
   visibility: hidden;
+}
+a:hover{
+  opacity: 70%;
+}
+.tel:hover{
+opacity: 70%;
 }
