--- a/about_me.css
+++ b/about_me.css
@@ -1,12 +1,16 @@
 
 .side-menu{
 	width: 80%;
-	margin: 0 auto;
+	margin: 0 10%;
 	padding-top: 30px;
 	padding-bottom: 30px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	position: fixed;
+	z-index: 50;
+	font-weight: 400;
+
 
 
 }
@@ -55,7 +59,7 @@ a{
 	font-weight: 300;
 }
 .about_me{
-	padding-top: 30px ;
+	padding-top: 120px ;
 	display: flex;
 	justify-content: space-between;
 	font-family: 'Jost', sans-serif;
@@ -80,3 +84,142 @@ p{
 .text_about{
 	width: 50%;
 }
+
+.nav-button{
+	display: none;
+}
+
+
+
+@media (max-width: 1230px){
+
+.nav-list{
+		display: none;
+	}
+	.nav-button{
+	display: block;
+	border: none;
+	background: none;
+	z-index: 10;
+	position: fixed;
+	top: 23px;
+	right: 40px;
+	}
+
+
+#nav.open .nav-list{
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	background: white;
+	padding: 46px 38px;
+	display: flex;
+	flex-direction: column;
+	row-gap: 40px;
+	font-size: 34px;
+	font-weight: 600;
+}
+.nav-link.active{
+	color: black;
+}
+.nav-link{
+	color: gray;
+}
+
+.header-row{
+	flex-direction: column;
+	text-align: center;
+}
+
+.header-content{
+margin:  0 auto;
+
+
+}
+.header-img{
+	margin: 0 auto;
+}
+.servise{
+	display: block;
+	/*flex-wrap: wrap;*/
+    }
+ .project-img{
+ 	max-width: 300px;
+ }
+ .portfolio-title{
+	margin-bottom: 0px;
+}
+.header img{
+	max-width: 300px;
+
+}
+.header-img{
+	margin-bottom: -7px;
+
+}
+button img {
+	width: 40px;
+	height: 40px;
+}
+
+}
+/*@media(max-width: 767px){
+.header_burger{
+	display: block;
+	position: relative;
+	width: 30px;
+	height: 20px;
+	z-index: 3;
+}
+.header_burger:before,
+.header_burger:after{
+	content: "";
+	background-color: black;
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	left:  0;
+}
+.header_burger:before{
+	top: 0;
+}
+.header_burger:after{
+	bottom: 0;
+}
+
+.header_burger span {
+	position: absolute;
+	background-color: black;
+	left: 0;
+	width: 100%;
+	height: 2px;
+	top: 9px;
+	}
+
+	.ul{
+		position: fixed;
+		top: 0;
+		left:  0;
+		width: 100%;
+		height: 100%;
+		background-color: gray;
+	}
+	.side{
+  z-index: 4;
+
+	}
+	ul{
+		padding-top: 100px;
+		width: 100%;
+		padding-left: 10%;
+	}
+	li{
+		display: block;
+		width: 100%;
+		padding-top: 20px;
+
+	}
+}
+*/
